--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
     <script src="game.js"></script>
     <script src="main.js"></script>
 </head>
+<style>
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
 
+.button:hover {
+    background-color: green;
+}
+</style>
 <!-- Navigation Bar-->
 <nav class="w3-bar w3-black">
-  <a href="#home" class="w3-button w3-bar-item">Home</a>
-  <a href="#band" class="w3-button w3-bar-item">Band</a>
-  <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+    <button><a href="#home" class="w3-button w3-bar-item">Home</a></button>
+    <button><a href="#aboutUs" class="w3-button w3-bar-item">About Us</a></button>
+  <button><a href="#game" class="w3-button w3-bar-item">Game</a></button>
+  <button><a href="#competitions" class="w3-button w3-bar-item">Competitions</a></button>
 </nav>
 
 <body>
