--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="main.js"></script>
 </head>
 <!-- Navigation Bar-->
-<nav class="w3-bar w3-black">
-    <button><a href="#home" class="w3-button w3-bar-item">Home</a></button>
-    <button><a href="#aboutUs" class="w3-button w3-bar-item">About Us</a></button>
-  <button><a href="#game" class="w3-button w3-bar-item">Game</a></button>
-  <button><a href="#competitions" class="w3-button w3-bar-item">Competitions</a></button>
+<nav class="bar">
+    <button><a href="#home" class="bar">Home</a></button>
+    <button><a href="#aboutUs" class="bar">About Us</a></button>
+  <button><a href="#game" class="bar">Game</a></button>
+  <button><a href="#competitions" class="bar">Competitions</a></button>
 </nav>
 
 <body>
