--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
 </head>
 <!-- Navigation Bar-->
 <nav class="bar">
-    <button><a href="#home" class="bar">Home</a></button>
-    <button><a href="#aboutUs" class="bar">About Us</a></button>
-  <button><a href="#game" class="bar">Game</a></button>
-  <button><a href="#competitions" class="bar">Competitions</a></button>
+    <a href="#home" class="bar">
+        <button>Home</button>
+    </a>
+    <a href="#aboutUs" class="bar">
+        <button>About Us</button>
+    </a>
+    <a href="#game" class="bar">
+        <button>Game</button>
+    </a>
+    <a href="#competitions" class="bar">
+        <button>Competitions</button>
+    </a>
 </nav>
 
 <body>
-    <h1>BlockShooter</h1>
-    <canvas id="game"></canvas>
-    <p>WASD: move</p>
-    <p>SPACE: shoot</p>
-    <p>P: pause</p>
-    <p>R: restart</p>
+<h1>BlockShooter</h1>
+<canvas id="game"></canvas>
+<p>WASD: move</p>
+<p>SPACE: shoot</p>
+<p>P: pause</p>
+<p>R: restart</p>
 </body>
