--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="game.js"></script>
     <script src="main.js"></script>
 </head>
+    
 <!-- Navigation Bar-->
 <nav class="bar">
     <a href="#home" class="bar">
@@ -24,7 +25,8 @@
 </nav>
 
 <body>
-<h1>BlockShooter</h1>
+<h1>IHS DEV TEAM WEBSITE</h1>
+<h2>BlockShooter</h2>
 <canvas id="game"></canvas>
 <p>WASD: move</p>
 <p>SPACE: shoot</p>
