--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <a href="#aboutUs" class="bar">
         <button>About Us</button>
     </a>
-    <a href="#game" class="bar">
+    <a href="#shooter" class="bar">
         <button>Game</button>
     </a>
     <a href="#competitions" class="bar">
         <button>Competitions</button>
     </a>
 </nav>
-
 <body>
-<h1>IHS DEV TEAM WEBSITE</h1>
-<h2>BlockShooter</h2>
+<h1>IHS Dev Team</h1>
+<h2 id="aboutUs">About Us</h2>
+<object data="AboutUs.txt"></object>
+<h2 id="shooter">BlockShooter</h2>
 <canvas id="game"></canvas>
 <p>WASD: move</p>
 <p>SPACE: shoot</p>
