--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="graphics.js"></script>
-    <script src="sprites.js"></script>
-    <script src="game.js"></script>
-    <script src="main.js"></script>
+    <script src="BlockShooter/graphics.js"></script>
+    <script src="BlockShooter/sprites.js"></script>
+    <script src="BlockShooter/game.js"></script>
+    <script src="BlockShooter/main.js"></script>
 </head>
     
 <!-- Navigation Bar-->
