Home button now jumps to the top of the page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button>Competitions</button>
     </a>
 </nav>
-<body>
+<body id="shooter">
 <h1>IHS Dev Team</h1>
 <h2 id="aboutUs">About Us</h2>
 <p id="aboutusparagraph">beep boop</p>
