--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button>Competitions</button>
     </a>
 </nav>
-<body id="shooter">
+<body id="home">
 <h1>IHS Dev Team</h1>
 <h2 id="aboutUs">About Us</h2>
 <p id="aboutusparagraph">beep boop</p>
