--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <a href="#competitions" class="bar">
         <button class="btn">Competitions</button>
     </a>
+    <a href="#announcements" class="bar">
+        <button class="btn">Announcements</button>
+    </a>
 </nav>
 
 <body id="home">
