--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="BlockShooter/main.js"></script>
 </head>
 
+<body id="home">
+<div class='bg'></div>
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="#home" class="bar">
@@ -28,7 +30,6 @@
     </a>
 </nav>
 
-<body id="home">
 <h1>IHS Dev Team</h1>
 <h2 id="aboutUs">About Us</h2>
 <p id="aboutusparagraph">
