--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
-        <button class="btn">About Us</button>
+        <button class="btn active">About Us</button>
     </a>
     <a href="game.html" class="bar">
         <button class="btn">Game</button>
