--- a/announcements.html
+++ b/announcements.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
@@ -26,7 +26,7 @@
         <button class="btn">Competitions</button>
     </a>
     <a href="announcements.html" class="bar">
-        <button class="btn">Announcements</button>
+        <button class="btn active">Announcements</button>
     </a>
 </nav>
 
