--- a/competitions.html
+++ b/competitions.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
@@ -23,7 +23,7 @@
         <button class="btn">Game</button>
     </a>
     <a href="competitions.html" class="bar">
-        <button class="btn">Competitions</button>
+        <button class="btn active">Competitions</button>
     </a>
     <a href="announcements.html" class="bar">
         <button class="btn">Announcements</button>
