--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
         <button class="btn">About Us</button>
     </a>
     <a href="game.html" class="bar">
-        <button class="btn">Game</button>
+        <button class="btn active">Game</button>
     </a>
     <a href="competitions.html" class="bar">
         <button class="btn">Competitions</button>
