--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
