--- a/competitions.html
+++ b/competitions.html
@@ -46,3 +46,16 @@ This website was created to practice Javascript, CSS and website programming.
 <p>P: pause</p>
 <p>R: restart</p>
 </body>
+
+
+
+<h1>Competitions</h1>
+<h2 id="competitions">About Us</h2>
+<p id="competitionparagraph">
+Throughout the school year, the IHS Dev Team participates in many different programming compeitions including: 
+    - ACSL Programming Contest
+    - PClassic Fall and Spring
+    - St. Bonaventure Programming Contest
+    - Cornell Programming Contest
+</p>
+<script src="buttons.js"></script>
