--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="announcements.html" class="bar">
         <button class="btn">Announcements</button>
     </a>
-    <a href="#contact" class="bar">
+    <a href="contact.html" class="bar">
         <button class="btn">Contact</button>
     </a>
 </nav>
