--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+
+<head>
+    <title>IHS Dev Team</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body id="home">
+<div class='bg'></div>
+<!-- Navigation Bar-->
+<nav id="menu" class="bar">
+    <a href="index.html" class="bar">
+        <button class="btn active">Home</button>
+    </a>
+    <a href="about.html" class="bar">
+        <button class="btn">About Us</button>
+    </a>
+    <a href="game.html" class="bar">
+        <button class="btn">Game</button>
+    </a>
+    <a href="competitions.html" class="bar">
+        <button class="btn">Competitions</button>
+    </a>
+    <a href="announcements.html" class="bar">
+        <button class="btn">Announcements</button>
+    </a>
+    <a href="contact.html" class="bar">
+        <button class="btn">Contact</button>
+    </a>
+</nav>
+
 <h2 id="contact">Contact</h2>
 <p id="contactparagraph">
 Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850
