--- a/competitions.html
+++ b/competitions.html
@@ -50,12 +50,12 @@ This website was created to practice Javascript, CSS and website programming.
 
 
 <h1>Competitions</h1>
-<h2 id="competitions">About Us</h2>
+<h2 id="competitions">Competitions</h2>
 <p id="competitionparagraph">
 Throughout the school year, the IHS Dev Team participates in many different programming compeitions including: 
-    - ACSL Programming Contest
-    - PClassic Fall and Spring
-    - St. Bonaventure Programming Contest
-    - Cornell Programming Contest
+<br>    - ACSL Programming Contest
+<br>    - PClassic Fall and Spring
+<br>    - St. Bonaventure Programming Contest
+<br>    - Cornell Programming Contest
 </p>
 <script src="buttons.js"></script>
