--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <!-- Navigation Bar-->
 <nav id="menu" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
@@ -25,12 +25,14 @@
         <button class="btn">Announcements</button>
     </a>
     <a href="contact.html" class="bar">
-        <button class="btn">Contact</button>
+        <button class="btn active">Contact</button>
     </a>
 </nav>
 
 <h2 id="contact">Contact</h2>
 <p id="contactparagraph">
 Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850
+    <br>
 Email: fdeppe@icsd.k12.ny.us
+    </br>
 </p>
