--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        p {
+         font-size:20px;
+        }
+    </style>
 </head>
 
 <body id="home">
@@ -32,7 +37,6 @@
 <h2 id="contact">Contact</h2>
 <p id="contactparagraph">
 Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850
-    <br>
-Email: fdeppe@icsd.k12.ny.us
-    </br>
+    <br>Email: fdeppe@icsd.k12.ny.us</br>
+    <br>Phone: (607) 274-2143</br>
 </p>
