--- a/announcements.html
+++ b/announcements.html
@@ -3,7 +3,33 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="BlockShooter/graphics.js"></script>
+    <script src="BlockShooter/sprites.js"></script>
+    <script src="BlockShooter/game.js"></script>
+    <script src="BlockShooter/main.js"></script>
 </head>
 
 <body id="home">
+<div class='bg'></div>
+<!-- Navigation Bar-->
+<nav id="menu" class="bar">
+    <a href="index.html" class="bar">
+        <button class="btn">Home</button>
+    </a>
+    <a href="about.html" class="bar">
+        <button class="btn">About Us</button>
+    </a>
+    <a href="game.html" class="bar">
+        <button class="btn">Game</button>
+    </a>
+    <a href="competitions.html" class="bar">
+        <button class="btn">Competitions</button>
+    </a>
+    <a href="announcements.html" class="bar">
+        <button class="btn active">Announcements</button>
+    </a>
+</nav>
+<h1>Announcements</h1>
+<h3>5/31/18</h3>
+<p>Our new website</p>
 </body>
