--- a/about.html
+++ b/about.html
@@ -28,6 +28,9 @@
     <a href="announcements.html" class="bar">
         <button class="btn">Announcements</button>
     </a>
+    <a href="contact.html" class="bar">
+        <button class="btn">Contact</button>
+    </a>
 </nav>
 
 <h2>About Us</h2>
