--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
 <h2 id="contact">Contact</h2>
 <p id="contactparagraph">
-Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850
-<br>Email: fdeppe@icsd.k12.ny.us
-    Phone: (607) 274-2143</br>
+    <br>Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850</br>
+    <br>Email: fdeppe@icsd.k12.ny.us</br>
+    <br>Phone: (607) 274-2143</br>
 </p>
