--- a/jerry.html
+++ b/jerry.html
@@ -26,15 +26,19 @@
   
   <script>
     	var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-  var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-75px";
-  }
-  prevScrollpos = currentScrollPos;
-}
+        window.onscroll = function() 
+        {
+            var currentScrollPos = window.pageYOffset;
+            if (prevScrollpos > currentScrollPos) 
+            {
+                document.getElementById("navbar").style.top = "0";
+            } 
+            else 
+            {
+                document.getElementById("navbar").style.top = "-75px";
+            }
+            prevScrollpos = currentScrollPos;
+        }
     </script>
 </div>
 
