--- a/about.html
+++ b/about.html
@@ -3,15 +3,12 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="BlockShooter/graphics.js"></script>
-    <script src="BlockShooter/sprites.js"></script>
-    <script src="BlockShooter/game.js"></script>
-    <script src="BlockShooter/main.js"></script>
+    <script src="navbar.js"></script>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-<nav id="menu" class="bar">
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn">Home</button>
     </a>
@@ -31,10 +28,12 @@
         <button class="btn">Contact</button>
     </a>
 </nav>
-
-<h2>About Us</h2>
-<p> 
-The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and participating in coding competitions. 
-This website was created to practice Javascript, CSS and website programming.
-</p>
+<div id="outer">
+    <h2>About Us</h2>
+    <p>
+        The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and participating in coding
+        competitions.
+        This website was created to practice Javascript, CSS and website programming.
+    </p>
+</div>
 </body>
