--- a/competitions.html
+++ b/competitions.html
@@ -3,12 +3,13 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="navbar.js"></script>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-    
-<nav id="menu" class="bar">
+
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn">Home</button>
     </a>
@@ -29,17 +30,15 @@
     </a>
 </nav>
 
-<h1>IHS Dev Team</h1>
-<script src="buttons.js"></script>
-
-
-
-<h2 id="competitions">Competitions</h2>
-<p id="competitionparagraph">
-Throughout the school year, the IHS Dev Team participates in many different programming compeitions including: 
-<br>    - ACSL Programming Contest
-<br>    - PClassic Fall and Spring
-<br>    - St. Bonaventure Programming Contest
-<br>    - Cornell Programming Contest
-</p>
-<script src="buttons.js"></script>
+<div id="outer">
+    <h1>IHS Dev Team</h1>
+    <h2 id="competitions">Competitions</h2>
+    <p id="competitionparagraph">
+        Throughout the school year, the IHS Dev Team participates in many different programming compeitions including:
+        <br> - ACSL Programming Contest
+        <br> - PClassic Fall and Spring
+        <br> - St. Bonaventure Programming Contest
+        <br> - Cornell Programming Contest
+    </p>
+</div>
+</body>
