--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,17 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="navbar.js"></script>
     <style>
         p {
-         font-size:20px;
+            font-size: 20px;
         }
     </style>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-<nav id="menu" class="bar">
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn">Home</button>
     </a>
@@ -32,10 +33,13 @@
         <button class="btn active">Contact</button>
     </a>
 </nav>
-
-<h2 id="contact">Contact</h2>
-<p id="contactparagraph">
-    <br>Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850</br>
-    <br>Email: fdeppe@icsd.k12.ny.us</br>
-    <br>Phone: (607) 274-2143</br>
+<div id="outer">
+    <h2 id="contact">Contact</h2>
+    <p id="contactparagraph">
+        <br>Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850</br>
+        <br>Email: fdeppe@icsd.k12.ny.us</br>
+        <br>Phone: (607) 274-2143</br>
+    </p>
+</div>
 </p>
+</body>
