--- a/announcements.html
+++ b/announcements.html
@@ -3,15 +3,12 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="BlockShooter/graphics.js"></script>
-    <script src="BlockShooter/sprites.js"></script>
-    <script src="BlockShooter/game.js"></script>
-    <script src="BlockShooter/main.js"></script>
+    <script src="navbar.js"></script>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-<nav id="menu" class="bar">
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn">Home</button>
     </a>
@@ -27,8 +24,13 @@
     <a href="announcements.html" class="bar">
         <button class="btn active">Announcements</button>
     </a>
+    <a href="contact.html" class="bar">
+        <button class="btn">Contact</button>
+    </a>
 </nav>
-<h1>Announcements</h1>
-<h3>5/31/18</h3>
-<p>Our new website</p>
+<div id="outer">
+    <h1>Announcements</h1>
+    <h3>5/31/18</h3>
+    <p>Our new website</p>
+</div>
 </body>
