--- a/game.html
+++ b/game.html
@@ -7,11 +7,12 @@
     <script src="BlockShooter/sprites.js"></script>
     <script src="BlockShooter/game.js"></script>
     <script src="BlockShooter/main.js"></script>
+    <script src="navbar.js"></script>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-<nav id="menu" class="bar">
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn">Home</button>
     </a>
@@ -31,14 +32,13 @@
         <button class="btn">Contact</button>
     </a>
 </nav>
-
-<h1>IHS Dev Team</h1>
-
-
-<h2 id="shooter">BlockShooter</h2>
-<p>WASD: move</p>
-<p>SPACE: shoot</p>
-<p>P: pause</p>
-<p>R: restart</p>
-<canvas id="game"></canvas>
+<div id="outer">
+    <h1>IHS Dev Team</h1>
+    <h2 id="shooter">BlockShooter</h2>
+    <p>WASD: move</p>
+    <p>SPACE: shoot</p>
+    <p>P: pause</p>
+    <p>R: restart</p>
+    <canvas id="game"></canvas>
+</div>
 </body>
