--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="BlockShooter/graphics.js"></script>
-    <script src="BlockShooter/sprites.js"></script>
-    <script src="BlockShooter/game.js"></script>
-    <script src="BlockShooter/main.js"></script>
+    <script src="navbar.js"></script>
 </head>
 
 <body id="home">
 <div class='bg'></div>
-<nav id="menu" class="bar">
+<nav id="navbar" class="bar">
     <a href="index.html" class="bar">
         <button class="btn active">Home</button>
     </a>
@@ -31,6 +28,7 @@
         <button class="btn">Contact</button>
     </a>
 </nav>
-
-<h1>IHS Dev Team</h1>
+<div id="outer">
+    <h1>IHS Dev Team</h1>
+</div>
 </body>
