Navbar and background and image

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <script src="BlockShooter/sprites.js"></script>
     <script src="BlockShooter/game.js"></script>
     <script src="BlockShooter/main.js"></script>
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
