--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
@@ -30,5 +30,6 @@
 </nav>
 <div id="outer">
     <h1>IHS Dev Team</h1>
+    <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
 </div>
 </body>
