--- a/announcements.html
+++ b/announcements.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
