--- a/about.html
+++ b/about.html
@@ -29,11 +29,13 @@
     </a>
 </nav>
 <div id="outer">
-    <h2>About Us</h2>
+    <div class='box'><h2>About Us</h2></div>
+    <div class='box'>
     <p>
         The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and participating in coding
         competitions.
         This website was created to practice Javascript, CSS and website programming.
     </p>
+    </box>
 </div>
 </body>
