--- a/announcements.html
+++ b/announcements.html
@@ -29,8 +29,10 @@
     </a>
 </nav>
 <div id="outer">
-    <h1>Announcements</h1>
+    <div class='box'><h1>Announcements</h1></div>
+    <div class='box'>
     <h3>5/31/18</h3>
     <p>Our new website</p>
+    </div>
 </div>
 </body>
