--- a/competitions.html
+++ b/competitions.html
@@ -31,8 +31,8 @@
 </nav>
 
 <div id="outer">
-    <h1>IHS Dev Team</h1>
-    <h2 id="competitions">Competitions</h2>
+    <div class='box'><h2 id="competitions">Competitions</h2></div>
+    <div class='box'>
     <p id="competitionparagraph">
         Throughout the school year, the IHS Dev Team participates in many different programming compeitions including:
         <br> - ACSL Programming Contest
@@ -40,5 +40,6 @@
         <br> - St. Bonaventure Programming Contest
         <br> - Cornell Programming Contest
     </p>
+    </div>
 </div>
 </body>
