--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,12 @@
     </a>
 </nav>
 <div id="outer">
-    <h2 id="contact">Contact</h2>
-    <p id="contactparagraph">
+    <div class='box'><h2 id="contact">Contact</h2></div>
+    <div class='box'><p id="contactparagraph">
         <br>Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850</br>
         <br>Email: fdeppe@icsd.k12.ny.us</br>
         <br>Phone: (607) 274-2143</br>
-    </p>
+        </p></div>
 </div>
 </p>
 </body>
