--- a/game.html
+++ b/game.html
@@ -33,12 +33,13 @@
     </a>
 </nav>
 <div id="outer">
-    <h1>IHS Dev Team</h1>
-    <h2 id="shooter">BlockShooter</h2>
-    <p>WASD: move</p>
-    <p>SPACE: shoot</p>
-    <p>P: pause</p>
-    <p>R: restart</p>
+    <div class='box'><h2 id="shooter">BlockShooter</h2></div>
+    <div class='box'>
+        <p>WASD: move</p>
+        <p>SPACE: shoot</p>
+        <p>P: pause</p>
+        <p>R: restart</p>
+    </div>
     <canvas id="game"></canvas>
 </div>
 </body>
