--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </a>
 </nav>
 <div id="outer">
-    <h1>IHS Dev Team</h1>
+    <div class='box'><h1>IHS Dev Team</h1></div>
     <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
 </div>
 </body>
