--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and expanding our knowledge
         through competitions and project development. In-club, we collaborate on projects, discuss topics and make decisions
         on upcoming or current events and activities, but the majority of our efforts are directed towards preparing for
-        programming competitions such as PClassic and the St. Bonaventure and ACSL contests. 
+        programming competitions such as the PClassic, St. Bonaventure and ACSL contests. 
         <br> This website was created to practice Javascript, CSS and website programming.
         <br> Interested in joining? No experience is required and all are welcome! We meet in Room H-211 on Thursdays, and
         information, coding help and snacks are available.
