--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
         through competitions and project development. In-club, we collaborate on projects, discuss topics and make decisions
         on upcoming or current events and activities, but the majority of our efforts are directed towards preparing for
         programming competitions such as the PClassic, St. Bonaventure and ACSL contests. 
-        <br> This website was created to practice Javascript, CSS and website programming.
-        <br> Interested in joining? No experience is required and all are welcome! We meet in Room H-211 on Thursdays, and
+        <br><br> This website was created to practice Javascript, CSS and website programming.
+        <br><br> Interested in joining? No experience is required and all are welcome! We meet in Room H-211 on Thursdays, and
         information, coding help and snacks are available.
     </p>
     </box>
