--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <div class='bg'></div>
 <nav id="navbar" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
