--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
@@ -21,7 +21,7 @@
     <a href="competitions.html" class="bar">
         <button class="btn">Competitions</button>
     </a>
-    <a href="announcements.html" class="bar">
+    <a href="announcements.php" class="bar">
         <button class="btn">Announcements</button>
     </a>
     <a href="contact.html" class="bar">
@@ -29,11 +29,17 @@
     </a>
 </nav>
 <div id="outer">
-    <h2>About Us</h2>
+    <div class='box'><h1>About Us</h1></div>
+    <div class='box'>
     <p>
-        The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and participating in coding
-        competitions.
-        This website was created to practice Javascript, CSS and website programming.
+        The IHS Dev Team is a club at Ithaca High School dedicated to learning programming and expanding our knowledge
+        through competitions and project development. In-club, we collaborate on projects, discuss topics and make decisions
+        on upcoming or current events and activities, but the majority of our efforts are directed towards preparing for
+        programming competitions such as the PClassic, St. Bonaventure and ACSL contests. 
+        <br><br> This website was created to practice Javascript, CSS and website programming.
+        <br><br> Interested in joining? No experience is required and all are welcome! We meet in Room H-211 on Thursdays, and
+        information, coding help and snacks are available.
     </p>
+    </box>
 </div>
 </body>
