--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
     <style>
         p {
             font-size: 20px;
@@ -26,7 +26,7 @@
     <a href="competitions.html" class="bar">
         <button class="btn">Competitions</button>
     </a>
-    <a href="announcements.html" class="bar">
+    <a href="announcements.php" class="bar">
         <button class="btn">Announcements</button>
     </a>
     <a href="contact.html" class="bar">
@@ -34,12 +34,12 @@
     </a>
 </nav>
 <div id="outer">
-    <h2 id="contact">Contact</h2>
-    <p id="contactparagraph">
+    <div class='box'><h1 id="contact">Contact</h1></div>
+    <div class='box'><p id="contactparagraph">
         <br>Ithaca High School, 1041 N Cayuga St, Ithaca NY 14850</br>
         <br>Email: fdeppe@icsd.k12.ny.us</br>
         <br>Phone: (607) 274-2143</br>
-    </p>
+        </p></div>
 </div>
 </p>
 </body>
