--- a/competitions.html
+++ b/competitions.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
@@ -22,7 +22,7 @@
     <a href="competitions.html" class="bar">
         <button class="btn active">Competitions</button>
     </a>
-    <a href="announcements.html" class="bar">
+    <a href="announcements.php" class="bar">
         <button class="btn">Announcements</button>
     </a>
     <a href="contact.html" class="bar">
@@ -31,8 +31,8 @@
 </nav>
 
 <div id="outer">
-    <h1>IHS Dev Team</h1>
-    <h2 id="competitions">Competitions</h2>
+    <div class='box'><h1 id="competitions">Competitions</h1></div>
+    <div class='box'>
     <p id="competitionparagraph">
         Throughout the school year, the IHS Dev Team participates in many different programming compeitions including:
         <br> - ACSL Programming Contest
@@ -40,5 +40,6 @@
         <br> - St. Bonaventure Programming Contest
         <br> - Cornell Programming Contest
     </p>
+    </div>
 </div>
 </body>
