--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>IHS Dev Team</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="navbar.js"></script>
+    <script src="utils/navbar.js"></script>
 </head>
 
 <body id="home">
@@ -21,7 +21,7 @@
     <a href="competitions.html" class="bar">
         <button class="btn">Competitions</button>
     </a>
-    <a href="announcements.html" class="bar">
+    <a href="announcements.php" class="bar">
         <button class="btn">Announcements</button>
     </a>
     <a href="contact.html" class="bar">
@@ -29,6 +29,7 @@
     </a>
 </nav>
 <div id="outer">
-    <h1>IHS Dev Team</h1>
+    <div class='box'><h1>IHS Dev Team</h1></div>
+    <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
 </div>
 </body>
