--- a/401.html
+++ b/401.html
@@ -10,7 +10,7 @@
 <div class='bg'></div>
 <nav id="navbar" class="bar">
     <a href="index.html" class="bar">
-        <button class="btn active">Home</button>
+        <button class="btn">Home</button>
     </a>
     <a href="about.html" class="bar">
         <button class="btn">About Us</button>
@@ -29,7 +29,6 @@
     </a>
 </nav>
 <div id="outer">
-    <div class='box'><h1>IHS Dev Team</h1></div>
-    <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
+    <div class='box'><h1>401 Forbidden</div>
 </div>
 </body>
