--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 </nav>
 <div id="outer">
     <div class='box'><h1>IHS Dev Team</h1></div>
-    <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
+    <div class='box'>
+        <img width='600' src='images/pclassic_4.jpeg' alt='2017-2018 members'>
+    </div>
 </div>
 </body>
